--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -1,1 +1,11 @@
 <app-grocery-list></app-grocery-list>
+<h1
+    style="
+        text-align:center;
+        font-size: 48px;
+        font-weight: bold;
+        margin-top: 100px;
+    "
+>
+    Shopping list
+</h1>
