creates material design floating action button

--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -9,4 +9,8 @@
 >
     Shopping list
 </h1>
-<mat-card style="margin: 50px auto;"></mat-card>
+<mat-card style="margin: 50px auto;">
+    <button mat-fab color="primary" style="float: right;">
+        <mat-icon>add</mat-icon>
+    </button>
+</mat-card>
