--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -13,4 +13,5 @@
     <button mat-fab color="primary" style="float: right;">
         <mat-icon>add</mat-icon>
     </button>
+    <mat-form-field style="width: 100%;"></mat-form-field>
 </mat-card>
