--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -13,5 +13,7 @@
     <button mat-fab color="primary" style="float: right;">
         <mat-icon>add</mat-icon>
     </button>
-    <mat-form-field style="width: 100%;"></mat-form-field>
+    <mat-form-field style="width: 100%;">
+        <mat-label>Grocery item</mat-label>
+    </mat-form-field>
 </mat-card>
