--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -15,5 +15,6 @@
     </button>
     <mat-form-field style="width: 100%;">
         <mat-label>Grocery item</mat-label>
+        <input matInput placeholder="Ex. Rice" />
     </mat-form-field>
 </mat-card>
