--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -17,4 +17,6 @@
         <mat-label>Grocery item</mat-label>
         <input matInput placeholder="Ex. Rice" />
     </mat-form-field>
+
+    <mat-list></mat-list>
 </mat-card>
