create material design list item for each item in list using *ngFor directive and display item ID and name

--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -18,5 +18,10 @@
         <input matInput placeholder="Ex. Rice" />
     </mat-form-field>
 
-    <mat-list></mat-list>
+    <mat-list>
+        <mat-list-item *ngFor="let grocery of groceries">
+            <span style="font-weight: bold;"
+                >{{ grocery.id }}. {{ grocery.item }}</span>
+        </mat-list-item>
+    </mat-list>
 </mat-card>
