--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -22,7 +22,9 @@
         <mat-list-item *ngFor="let grocery of groceries">
             <span style="font-weight: bold;"
                 >{{ grocery.id }}. {{ grocery.item }}</span>
-                <span style="position: absolute; right: 0;"></span>
+                <span style="position: absolute; right: 0;">
+                    <button mat-icon-button></button>
+                </span>
         </mat-list-item>
     </mat-list>
 </mat-card>
