add material design icon to edit button

--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -23,7 +23,11 @@
             <span style="font-weight: bold;"
                 >{{ grocery.id }}. {{ grocery.item }}</span>
                 <span style="position: absolute; right: 0;">
-                    <button mat-icon-button></button>
+                    <button mat-icon-button>
+                        <mat-icon color="primary">
+                            edit
+                        </mat-icon>
+                    </button>
                 </span>
         </mat-list-item>
     </mat-list>
