create material icon for delete button

--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -28,6 +28,11 @@
                             edit
                         </mat-icon>
                     </button>
+                    <button mat-icon-button>
+                        <mat-icon warn="delete">
+                            delete
+                        </mat-icon>
+                    </button>
                 </span>
         </mat-list-item>
     </mat-list>
