change delete button style

--- a/Frontend/crud-operations/src/app/app.component.html
+++ b/Frontend/crud-operations/src/app/app.component.html
@@ -29,7 +29,7 @@
                         </mat-icon>
                     </button>
                     <button mat-icon-button>
-                        <mat-icon warn="delete">
+                        <mat-icon color="warn">
                             delete
                         </mat-icon>
                     </button>
