move html code to correct file

--- a/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
+++ b/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
@@ -1,1 +1,39 @@
 <mat-toolbar color="primary">CRUD Operations</mat-toolbar>
+<h1
+    style="
+        text-align:center;
+        font-size: 48px;
+        font-weight: bold;
+        margin-top: 100px;
+    "
+>
+    Shopping list
+</h1>
+<mat-card style="margin: 50px auto;">
+    <button mat-fab color="primary" style="float: right;">
+        <mat-icon>add</mat-icon>
+    </button>
+    <mat-form-field style="width: 100%;">
+        <mat-label>Grocery item</mat-label>
+        <input matInput placeholder="Ex. Rice" />
+    </mat-form-field>
+
+    <mat-list>
+        <mat-list-item *ngFor="let grocery of groceries">
+            <span style="font-weight: bold;"
+                >{{ grocery.id }}. {{ grocery.item }}</span>
+                <span style="position: absolute; right: 0;">
+                    <button mat-icon-button>
+                        <mat-icon color="primary">
+                            edit
+                        </mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon color="warn">
+                            delete
+                        </mat-icon>
+                    </button>
+                </span>
+        </mat-list-item>
+    </mat-list>
+</mat-card>
