--- a/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
+++ b/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
@@ -19,7 +19,7 @@
     </mat-form-field>
 
     <mat-list>
-        <mat-list-item *ngFor="let grocery of groceries">
+        <mat-list-item *ngFor="let grocery of groceries$ | async">
             <span style="font-weight: bold;"
                 >{{ grocery.id }}. {{ grocery.item }}</span>
                 <span style="position: absolute; right: 0;">
