add '#groceryInput' template reference variable that can be used to access input element

--- a/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
+++ b/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
@@ -15,7 +15,7 @@
     </button>
     <mat-form-field style="width: 100%;">
         <mat-label>Grocery item</mat-label>
-        <input matInput placeholder="Ex. Rice" />
+        <input #groceryInput matInput placeholder="Ex. Rice" />
     </mat-form-field>
 
     <mat-list>
