add click event handler that calls update() method with grocery ID and new item value

--- a/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
+++ b/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
@@ -24,7 +24,9 @@
                 >{{ grocery.id }}. {{ grocery.item }}</span>
                 <span style="position: absolute; right: 0;">
                     <button mat-icon-button>
-                        <mat-icon color="primary">
+                        <mat-icon
+                            (click)="update(grocery.id, { item: groceryInput.value })"
+                            color="primary">
                             edit
                         </mat-icon>
                     </button>
