--- a/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
+++ b/Frontend/crud-operations/src/app/components/grocery-list/grocery-list.component.html
@@ -31,7 +31,7 @@
                         </mat-icon>
                     </button>
                     <button mat-icon-button>
-                        <mat-icon color="warn">
+                        <mat-icon (click)="delete(grocery.id)" color="warn">
                             delete
                         </mat-icon>
                     </button>
